--- a/osa2/maiden_tiedot/public/index.html
+++ b/osa2/maiden_tiedot/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
+    <style>
+      body {
+        padding: 5vh;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 18px;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
